Add filebot rename result view to page

--- a/src/projects/SyncWatcherTray/View/LocalCleanerView.xaml
+++ b/src/projects/SyncWatcherTray/View/LocalCleanerView.xaml
@@ -7,6 +7,7 @@
     xmlns:view1="clr-namespace:MVVM.View;assembly=MVVM"
     xmlns:viewModel1="clr-namespace:SyncWatcherTray.ViewModel"
     xmlns:fa="http://schemas.fontawesome.io/icons/"
+    xmlns:view="clr-namespace:FilebotApi.View;assembly=FilebotApi"
     d:DataContext="{d:DesignInstance viewModel1:LocalCleanerViewModel, IsDesignTimeCreatable=True}"
     d:DesignHeight="800"
     d:DesignWidth="600"
@@ -74,16 +75,27 @@
             </Grid>
         </Grid>
 
-        <Border
-            BorderBrush="Black"
-            Background="{StaticResource NormalBackgroundBrush}"
-            BorderThickness="1"
-            CornerRadius="2"
+        <Grid
             Grid.Row="2">
-            <Grid>
-                <view1:LogView Focusable="False" />
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Border
+                BorderBrush="Black"
+                Background="{StaticResource NormalBackgroundBrush}"
+                BorderThickness="1"
+                CornerRadius="2"
+                Grid.Column="0">
 
-                <fa:ImageAwesome
+                <Grid>
+                    <Image Source="{StaticResource SyncWatcherTrayImage}"
+                           Width="80" Height="80" HorizontalAlignment="Right"
+                           VerticalAlignment="Bottom" Margin="14,4" Opacity="0.25" />
+
+                    <view1:LogView Focusable="False" />
+
+                    <fa:ImageAwesome
                     Width="18"
                     Height="18"
                     Margin="12,12,24,12"
@@ -93,12 +105,10 @@
                     Spin="True"
                     SpinDuration="2"
                     Visibility="{Binding IsBusy, Converter={StaticResource BoolToVisibilityConverter}}" />
-            </Grid>
-        </Border>
+                </Grid>
+            </Border>
 
-        <Image Source="{StaticResource SyncWatcherTrayImage}"
-               Grid.Row="2"
-               Width="80" Height="80" HorizontalAlignment="Right"
-               VerticalAlignment="Bottom" Margin="14,4" Opacity="0.25" />
+            <view:FilebotRenameResultsView Grid.Column="1" DataContext="{Binding FilebotHistory}"/>
+        </Grid>
     </Grid>
 </UserControl>
