--- a/src/projects/SyncWatcherTray/View/MainWindow.xaml
+++ b/src/projects/SyncWatcherTray/View/MainWindow.xaml
@@ -25,12 +25,16 @@
     Background="#dfdfdfdf"
     mc:Ignorable="d">
 
+    <Window.InputBindings>
+        <KeyBinding Command="{Binding SwitchToMoviesCommand}" Key="F" Modifiers="Alt" />
+        <KeyBinding Command="{Binding SwitchToSeriesCommand}" Key="S" Modifiers="Alt" />
+    </Window.InputBindings>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
 
         <tb:TaskbarIcon
             IconSource="{Binding TaskBarIcon.IconSource}"
@@ -45,7 +49,6 @@
         </tb:TaskbarIcon>
 
         <Grid Grid.Row="0" Grid.RowSpan="2" Margin="3">
-
             <controls:TabControlEx
                 x:Name="TabControl"
                 SelectionChanged="TabControl_OnSelectionChanged">
