Fixed searchbox focus on show

--- a/src/projects/SyncWatcherTray/View/LocalCleanerView.xaml
+++ b/src/projects/SyncWatcherTray/View/LocalCleanerView.xaml
@@ -27,6 +27,7 @@
         </Grid.RowDefinitions>
 
         <view1:DirectoryView
+                x:Name="DirectoryView"
                 Grid.Row="0"
                 DataContext="{Binding DirectoryViewModel}" />
 
